crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__a_stop_card_renders_its_body_table_and_figure_under_the_span.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" How the answer moved (2)        Diff                                                                                   "
" What changed  lib.rs            modified  src/lib.rs · 2 comments                                           +1 -1 █████"
"▌The answer  lib.rs              answer                                                                                 "
"                                 @@ -1,3 +1,3 @@                                                                        "
"                                    1    1 pub fn answer() -> u32 {                                                     "
"                                ▌        2     42                                                                       "
"                                    3    3 }                                                                            "
"                                  ▌ The answer  agent · open                                                            "
"                                  ▌ The layer that wins is the last one to set the key.                                 "
"                                  ▌                                                                                     "
"                                  ▌ Layer    │ Wins on                                                                  "
"                                  ▌ ─────────┼──────────                                                                "
"                                  ▌ built-in │ nothing                                                                  "
"                                  ▌ cli      │ every key                                                                "
"                                  ▌ figure 1                                                                            "
"                                  ▌ ╭───────────────╮      ╭───────╮                                                    "
"                                  ▌ │ load defaults │─────▸│ merge │                                                    "
"                                  ▌ ╰───────────────╯      ╰───────╯                                                    "
"                                  ▌                                                                                     "
"                                  ▌                                                                                     "
"                                  ▌                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
