crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__a_stop_in_a_large_file_windows_to_its_span.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" How the answer moved (1)        Diff                                                                                   "
"▌The change  big.txt             modified  big.txt · 1 comment                                               +1 -1 █████"
"                                 @@ -97,7 +97,7 @@ line 96                                                              "
"                                ▌      100 line 100 edited                                                              "
"                                  ▌ The change  agent · open                                                            "
"                                  ▌ why line 100 changed                                                                "
"                                  ▌                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/1 files                                                                        "
