crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__an_against_review_names_its_base_in_the_chip_and_the_pane_title.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff vs main                                                                           "
"▌○ dirty.rs               +1 -0  untracked dirty.rs                                                          +1 -0 █████"
" + landed.rs              +3 -0  dirty                                                                                  "
"                                 @@ -0,0 +1,1 @@                                                                        "
"                                ▌        1 pub fn dirty() {}                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF vs main  fixture@feature · mcp off · viewed 0/2 files                                                             "
