crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__comment_blocks_render_open_and_replied_threads.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  modified  src/lib.rs · 2 comments                                           +1 -1 █████"
"▌  ● lib.rs ·2            +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                  ▌ reviewer · replied                                                                  "
"                                  ▌ rename this?                                                                        "
"                                  ▌ └ agent: kept for api compat                                                        "
"                                  ▌                                                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                  ▌ reviewer · open                                                                     "
"                                  ▌ why 42?                                                                             "
"                                  ▌                                                                                     "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
